--- a/backup/pom.xml
+++ b/backup/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.helios</groupId>
+        <artifactId>backupPackage</artifactId>
+        <version>1.0.0</version>
+    </parent>
+
     <groupId>org.helios</groupId>
     <artifactId>backup</artifactId>
     <version>1.0.0</version>
@@ -49,6 +55,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
         </plugins>
